--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -3,7 +3,19 @@
   height: 90vh;
 }
 
-.main .today-weather {
+.main section {
+  width: 100vw;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  overflow-x: scroll;
+  padding-bottom: 50px;
+}
+
+.main section .today-weather {
+  display: block;
+  width: 400px;
+  height: 80%;
   width: 300px;
   height: 400px;
   background-color: rgba(0, 0, 0, 0.4);
@@ -13,18 +25,27 @@
   color: white;
 }
 
-.main .today-weather img {
+.main section .today-weather img {
   margin-top: 50px;
 }
 
-.main .today-weather h1 {
+.main section .today-weather h1 {
   margin: 0;
   font-size: 60px;
 }
 
-.main .other-weather-info {
-  width: 90%;
+.main section .other-weather-info {
+  width: 400pt;
   text-align: left;
   margin: 10% 0% 0% 10%;
+}
+
+@media (max-width: 768px) {
+  .main .section .today-weather {
+    width: 200px;
+  }
+  .main .section .other-weather-info {
+    width: 200px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
