--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -22,6 +22,9 @@
             width: 400px;
             height: 80%;
             @include weatherCard();
+            h2{
+                margin: 0;
+            }
             img{
                 margin-top: 50px;
                 
