--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,15 +1,21 @@
 .main {
   width: 100vw;
-  height: 90vh;
+  height: 70vh;
+  margin-top: 10vh;
 }
 
 .main section {
   width: 100vw;
+  height: 65vh;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
   overflow-x: scroll;
-  padding-bottom: 50px;
+  padding-bottom: 0px;
+}
+
+.main section .selected {
+  border: 1px solid black;
 }
 
 .main section .today-weather {
@@ -20,7 +26,7 @@
   height: 400px;
   background-color: rgba(0, 0, 0, 0.4);
   text-align: center;
-  margin: 50px 0px 0px 50px;
+  margin: 0px 0px 0px 50px;
   border-radius: 10px;
   color: white;
 }
@@ -44,12 +50,54 @@
   margin: 10% 0% 0% 10%;
 }
 
-@media (max-width: 768px) {
-  .main .section .today-weather {
-    width: 200px;
+.main #hour-forecast {
+  height: 15vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main #hour-forecast div {
+  border-radius: 3px;
+  width: 100px;
+  height: 80px;
+  background-color: rgba(0, 0, 0, 0.4);
+  margin: 0px 0px 0px 50px;
+  text-align: center;
+  color: white;
+  font-size: 1rem;
+}
+
+.main #hour-forecast div img {
+  width: 30px;
+  height: 30px;
+  margin: 0;
+}
+
+.main #hour-forecast div p, .main #hour-forecast div h4 {
+  margin: 0;
+}
+
+@media (max-width: 450px) {
+  .main section {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    margin-bottom: 80px;
+    padding: 0px 0px 20px 0px;
   }
-  .main .section .other-weather-info {
+  .main section .weather-card {
     width: 200px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .main section .weather-card h1 {
+    font-size: 8vw;
+  }
+  .main section .other-weather-info {
+    width: 200px;
+    font-size: 2.2vw;
   }
 }
 /*# sourceMappingURL=main.css.map */
